refactor: refactored the code and added new design and features

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Color Changer</title>
 </head>
-<body>
-    <header>
-        <h1>Welcome to circle click</h1>
-        <p>Click the round ball to change its color randomly</p>
-    </header>
-    <div id="circle">
-       <audio id="sound" loop src="sound.mp3" autoplay> </audio>   
-    </div>
+
+<body id="body">
+    <section>
+        <header>
+            <h1>Welcome to circle click</h1>
+            <p>Click the round ball to change its color randomly</p>
+        </header>
+        <button id="state">
+            <audio id="sound" loop src="sound.mp3" autoplay> </audio>
+        </button>
+    </section>
 </body>
-<script src="script.js"></script>
+<script src="gradient.js"></script>
 </html>
