corrected the text

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body id="body">
     <section>
         <header>
-            <h1>Welcome to circle click</h1>
-            <p>Click the round ball to change its color randomly</p>
+            <h1>Welcome</h1>
+            <p>Click the button to change the background color of the page randomly</p>
         </header>
         <button id="state">
             <audio id="sound" loop src="sound.mp3" autoplay> </audio>
